--- a/style/home.css
+++ b/style/home.css
@@ -1,64 +1,33 @@
 @charset "utf-8";
-
-#divNav{
-    /* height: 900px; */
-    /*background-image: url("../image/sea.jpg");*/
-    position: relative;
-    padding-bottom: 54% ;
+.brand {
+    font-family: 'Ubuntu', cursive;
+    font-weight: bold;
+    color: #49274a;
 }
-#divNav img{
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    position: absolute;
+.logo {
+    font-family: 'Ruthie', cursive;
+    font-size: 5rem;
+    color: #94618e;
 }
-#divNav h1,h2{ 
-    position: absolute;  
-    left: 50%;
-    text-align: center;
-    transform: translate(-50%, -50%); 
-}
-#divNav h2{
-    top:10%;
-}
-#divNav h1{
-    top: 35%;
+@font-face {
+    font-family:OPTICubaLibreTwo;
+    src: url("https://webfonts.ffonts.net/OPTICubaLibreTwo.font") format("opentype");
 }
 
-#divNav ul{
-    position: absolute;
-    width: 80%;
-    top:15%;
-    left: 10%
+@font-face {
+    font-family: OPTICubaLibreTwo;
+    font-weight: bold;
+    src: url("https://webfonts.ffonts.net/OPTICubaLibreTwo.font") format("opentype");
+}
+.titles {
+  font-family: OPTICubaLibreTwo;
+  color: #49274a;
+}
+.brand-dropdown {
+    background-color: #94618e;
 }
 
-#divNav ul li{
-    text-decoration: none;
-    display: inline;
-    padding-right: 5%;
-}
 
-#divNav ul li a{
-    text-decoration: none;
-}
-
-#divNav button{
-    position: absolute;
-    top:17%;
-    right: 10%;
-}
-
-#divGalary{
-    margin: 2% 1%;
-}
-
-#divGalary img{
-    width: 33%;
-}
-
-hr{
-    width: 90%;
-}
 
 #divPackage{
     margin: 2% 1%;
@@ -103,6 +72,7 @@ hr{
 #divForm form div label{
     display: block;
 }
+
 
 @media screen and (min-width:401px) and (max-width: 768px){
     #divGalary img{
