--- a/style/carousel.css
+++ b/style/carousel.css
@@ -10,14 +10,14 @@ hr{
     width: 90%;
 }
 .carousel-control-prev-icon, .carousel-control-next-icon {
-    height: 35px;
-    width: 35px;
+    height: 2rem;
+    width: 2rem;
     outline: black;
     
 }
 ol.carousel-indicators {
     position: absolute;
-    bottom: 30px;
+    bottom: 2rem;
     margin: 0;
     left: 0;
     right: 0;
@@ -27,7 +27,7 @@ ol.carousel-indicators {
  ol.carousel-indicators li,
  ol.carousel-indicators li.active {
     width: 2rem;
-    height: 4px;
+    height: 0.2rem;
     margin: 0;
     border-radius: 5%;
     border: 0;
