--- a/style/home2.css
+++ b/style/home2.css
@@ -1,9 +1,9 @@
 @charset "utf-8";
 
-#divNav{
+/* #divNav{
     position: relative;
     padding-bottom: 54% ;
-}
+} */
 #divNav img{
     width: 100%;
     height: 100%;
