--- a/style/dining.css
+++ b/style/dining.css
@@ -92,6 +92,8 @@ img{
     -webkit-transition-delay: .2s;
     transition-delay: .2s;
   }
+  @media only screen and (max-width:990px){#restaurant{margin-bottom:20px}
+}
   .box9{background:#000;text-align:center;position:relative}
 .box9 img{width:100%;height:auto}
 .box9:hover img{opacity:.5}
