--- a/style/navs.css
+++ b/style/navs.css
@@ -1,20 +1,4 @@
-/* font-family: 'Ruthie', cursive;
-font-family: 'Lovers Quarrel', cursive;
-font-family: 'Oswald', sans-serif;
-font-family: 'Great Vibes', cursive;
-font-family: 'Open Sans', sans-serif;
-font-family: 'Kaushan Script', cursive;
-font-family: 'Tangerine', cursive;
-font-family: 'Niconne', cursive;
-font-family: 'Arizonia', cursive;
-font-family: 'Ubuntu', sans-serif;
-font-family: 'Lato', sans-serif; 
-
-COLORS
-#94618e, #49274a, #f4decB, #F8eee7*/
-.container{
-    z-index: 5;
-}
+/*COLORS #94618e, #49274a, #f4decB, #F8eee7*/
 
 .brand {
     font-family: 'Ubuntu', cursive;
@@ -30,15 +14,16 @@ COLORS
     color: #94618e;
 }
 @font-face {
-    font-family:OPTICubaLibreTwo;
-    src: url("https://webfonts.ffonts.net/OPTICubaLibreTwo.font") format("opentype");
-}
-
-@font-face {
-    font-family: OPTICubaLibreTwo;
+    font-family: myFirstFont;
+    src: url(fonts/OPTICubaLibreTwo.otf);
+ }
+ 
+ @font-face {
+    font-family: myFirstFont;
+    src: url(fonts/OPTICubaLibreTwo_bold.otf);
     font-weight: bold;
-    src: url("https://webfonts.ffonts.net/OPTICubaLibreTwo.font") format("opentype");
-}
+ }
+
 .titles {
   font-family: OPTICubaLibreTwo;
   color: #49274a;
